--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#포트변경
+server.port = 8181
+
 #view 설정
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
@@ -9,10 +12,13 @@ spring.freemarker.cache=false
 #view 
 spring.mvc.static-path-pattern=/resource/**
 
-spring.datasource.url=jdbc:log4jdbc:mysql://simplehan.asuscomm.com:3333/test?useUnicode=true&charaterEncoding=utf-8&autoReconnect=true&useSSL=false
-spring.datasource.username=testuser
-spring.datasource.password=tdev12#
-spring.datasource.driverClassName=net.sf.log4jdbc.DriverSpy
+
 
 #mybatis
 mybatis.mapper-locations=/static/mappers/*Mapper.xml
+
+#mysql 설정
+spring.datasource.url=jdbc:log4jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&charaterEncoding=utf-8&autoReconnect=true&useSSL=false
+spring.datasource.username=tuser
+spring.datasource.password=test1958
+spring.datasource.driverClassName=net.sf.log4jdbc.DriverSpy
